add endpoints to get detailed container data, add endpoint to get images and detailed image data
